test/trivial/deitz/test_string2prims.good
4
4
4
4
-4
-4
-4
-4
4
4
4
4
3.14
3.14
3.14i
3.14i
3.14 + 0.0i
3.14 + 0.0i
3.14 + 2.1i
3.14 + 2.1i
true
false
test_string2prims.chpl:42: error: halt reached - Unexpected value when converting from string to bool: 'maybe'
